# pgvetor_base

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 44044e9665d1_create_initial_tables.py
src/: db.py
src/models/: db_model.py
