[tool.poetry]
name = "pgvector-base"
version = "0.1.0"
description = ""
authors = ["PH <phlin@example.com>"]
readme = "README.md"
packages = [{include = "*", from = "src"}, {include="models", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
pgvector = "^0.3.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pandas = "^2.2.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lint = "poetry run ruff check src tests --fix"
format = "poetry run ruff format src tests"
isort = "poetry run ruff check src tests --select I --fix-only"
db = "docker-compose exec db psql -U postgres -d pgvector_db"
con = "docker-compose exec app /bin/bash"
x = ["lint", "format", "isort"]
